<resources>
     <string name="app_name">Coral Glades</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="user_select">Welcome</string>
    <string name="settings">Settings</string>
    <string name="about"> About</string>
    <string name="back">Back</string>
    <string name="browser">Web</string>

    <string name="settings_text">Edit the users you would like to follow.</string>

    <string name="principal">Mr.Carruth</string>
    <string name="principal_twitter">"@PrincipalCGHS"</string>
    <string name="track">Jags Track and Field</string>
    <string name="track_twitter">"@JagsTrack"</string>
    <string name="sga">Student Government</string>
    <string name="sga_twitter">"@CGHS_SGA"</string>
    <string name="engineering">Engineering Club</string>
    <string name="engineering_twitter">"@CGHSEngineeringClub"</string>
    <string name="school">Coral Glades High School</string>
    <string name="address">Address: 2700 Sportsplex Drive Coral Springs, FL 33065</string>
    <string name="motto">Spirit - Responsibility - Involvement</string>
    <string name="principalName">Principal: Steven G. Carruth</string>
    <string name="phoneNumberMain">Main Number: 754-322-1250 </string>
    <string name="phoneNumberAttendance">Attendance Number: 754-322-1252 </string>
    <string name="phoneNumberFax">Fax Number: 754-322-1380</string>
    <string name="developer">Developed By: Brian Hans</string>
    <string name="createdWith">Created with the help of Twitter4J and Glide</string>

    
    <string-array name="nav_items">
        <item>Home</item>
        <item>Map</item>
        <item>Calendar</item>
        <item>Pinnacle</item>
        <item>BEEP</item>
        <item>Virtual Counselor</item>
        <item>Bell Schedule</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <array name="nav_icons">
        <item>@drawable/home</item>
        <item>@drawable/map</item>
        <item>@drawable/calendar_icon</item>
        <item>@drawable/pinnacle</item>
        <item>@drawable/beep</item>
        <item>@drawable/vc</item>
        <item>@drawable/vc</item>
        <item>@drawable/settings</item>
        <item>@drawable/help</item>
    </array>


    <string-array name="name">
        <item>Mr.Carruth</item>
        <item>Mrs.Ferrand</item>
        <item>Ms.Stein</item>
        <item>Guidance</item>
        <item>Athletics</item>
        <item>Track and Field</item>
        <item>Baseball</item>
        <item>Girl\'s Soccer</item>
        <item>Boy\'s Basketball</item>
        <item>Football</item>
        <item>Girl\'s Volleyball</item>
        <item>Class of 2016</item>
        <item>Class of 2017</item>
        <item>Class of 2018</item>
        <item>Coral Glades Imprint</item>
        <item>DECA</item>
        <item>HOSA</item>
        <item>SGA</item>
        <item>Music Association</item>
        <item>Color Guard</item>
        <item>Jaguar Singers</item>
        <item>Peer Pals</item>
        <item>CGHS Spanish Club</item>
        <item>Spirit Club</item>
        <item>Health and Fitness</item>
        <item>National Honor Society</item>
        <item>Key Club</item>
        <item>Drama</item>
        <item>Student Involvement Committee</item>
        <item>Ultimate Nerd Coalition</item>
        <item>WJAGTV</item>
        <item>The Prowl</item>
        <item>Mr.McCabe</item>
        <item>Mr.Goldfinger</item>
        <item>Ms.Monroe</item>
        <item>Mrs.Schoen</item>
        <item>Ms.Furst</item>
        <item>Mrs.Plass</item>
    </string-array>

    <string-array name="username">
        <item>principalCGHS</item>
        <item>CGHS_BRACE</item>
        <item>Michelestein17</item>
        <item>GuidanceCGHS</item>
        <item>athleticscghs</item>
        <item>jagstrack</item>
        <item>GladesBaseball_</item>
        <item>GladesSoccer</item>
        <item>CGHSbasketball</item>
        <item>footballcghs</item>
        <item>CghsVball</item>
        <item>coralglades2016</item>
        <item>Cghsco17</item>
        <item>cghs2018</item>
        <item>CGimprint</item>
        <item>cghsdeca</item>
        <item>CGHS_HOSA</item>
        <item>CoralGladesSGA</item>
        <item>cghsMA</item>
        <item>GladesGuard</item>
        <item>CGHS_SINGERS</item>
        <item>cghspeerpalz</item>
        <item>CghsSpanish</item>
        <item>CghsSpirit</item>
        <item>CghsHealthAF</item>
        <item>NHSCGHS</item>
        <item>GladesKeyClub</item>
        <item>GladesDrama</item>
        <item>CghsSic</item>
        <item>CoralGladesUNC</item>
        <item>WJAGTV</item>
        <item>CGHSTheProwl</item>
        <item>mccabealgebra</item>
        <item>DrewGoldfinger</item>
        <item>msmoore_reading</item>
        <item>tammy_schoen</item>
        <item>sfurstt</item>
        <item>LPlass</item>
    </string-array>


    <string name="title_activity_internet_twitter">InternetTwitter</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>
</resources>
